verify User from Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=spring-security-auth
 
 
-# credentials
-spring.security.user.name=java
-spring.security.user.password=java
+## credentials
+#spring.security.user.name=java
+#spring.security.user.password=java
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/tests
+spring.datasource.username=gabriel
+spring.datasource.password=senha
